--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,17 @@ body {
   font-size: 16px;
   font-family: "roboto", "Noto Sans KR", "sans-serif";
   line-height: 1;
+  color: #1d1d1d;
 }
 
 a {
   text-decoration: none;
+  color: #1d1d1d;
 }
 .inner {
   max-width: 1020px;
   margin: 0 auto;
+  position: relative;
 }
 header {
   background-color: #3e3e3e;
@@ -128,4 +131,105 @@ header .shopping_bag.show {
 
 .main_menu .btn_shopping_bag .shopping_bag ul li > a:hover {
   text-decoration: underline;
+}
+
+/* Header / Search bar */
+
+header .search_wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+header .search {
+  max-width: calc(100% - 90px);
+  margin: 0 auto;
+  position: relative;
+}
+
+header .search .shadow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+header .search .textfield {
+  position: relative;
+}
+
+header .search .textfield input {
+  width: 100%;
+  height: 44px;
+  color: #fff;
+  padding: 0 40px;
+  box-sizing: border-box;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+header .search .textfield .search-icon {
+  width: 40px;
+  height: 44px;
+  background-image: url(../images/header_search.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+}
+header .search .textfield .search-closer {
+  width: 40px;
+  height: 44px;
+  background-image: url(../images/header_close.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  opacity: 0.4;
+}
+
+header .search .textfield .search-closer:hover {
+  opacity: 1;
+}
+
+header .search .auto-completes {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  left: 0;
+  padding: 26px 40px 20px;
+  background-color: #fff;
+  border-radius: 0 0 18px 18px;
+  box-sizing: border-box;
+}
+
+header .search .auto-completes h3 {
+  margin-bottom: 20px;
+  font-size: 13px;
+}
+
+header .search .auto-completes li a {
+  display: block;
+  margin: 0 -14px;
+  padding: 10px 0 10px 30px;
+  box-sizing: border-box;
+  font-size: 14px;
+  cursor: pointer;
+  width: 100%;
+}
+header .search .auto-completes li:hover a {
+  color: #0071ea;
+}
+
+header.searching .inner ul.main_menu li {
+  display: none;
 }
