--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html.fixed {
+  position: fixed;
+  width: 100%;
+  overflow-y: scroll;
+}
+
 body {
   font-size: 16px;
   font-family: "roboto", "Noto Sans KR", "sans-serif";
@@ -96,7 +102,7 @@ header .shopping_bag.show {
   overflow: hidden;
   position: absolute;
   top: -10px;
-  right: 37px;
+  right: 26px;
 }
 
 .main_menu .btn_shopping_bag .shape::before {
@@ -140,6 +146,7 @@ header .search_wrap {
   top: 0;
   left: 0;
   width: 100%;
+  display: none;
 }
 
 header .search {
@@ -232,4 +239,8 @@ header .search .auto-completes li:hover a {
 
 header.searching .inner ul.main_menu li {
   display: none;
+}
+
+header.searching .search_wrap {
+  display: block;
 }
