--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,20 @@
 /* COMMON */
 
+html {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-font: #1d1d1d;
+  --color-font-darkgray: #6e6e6e;
+  --color-font-lightgray: #f5f5f5;
+  --color-link: #0071e3;
+  --color-link-focus: #81b9f1;
+  --color-border: #d2d2d2;
+  --color-header: #3a3a3a;
+  --color-section: #f5f5f5;
+  --color-shadow: rgba(0, 0, 0, 0.4);
+  --header-height: var(--header-height);
+}
+
 html.fixed {
   position: fixed;
   width: 100%;
@@ -12,20 +27,57 @@ body {
   font-size: 16px;
   font-family: "roboto", "Noto Sans KR", "sans-serif";
   line-height: 1;
-  color: #1d1d1d;
+  color: var(--color-font);
 }
 
 a {
   text-decoration: none;
-  color: #1d1d1d;
+  color: var(--color-font);
 }
 
+p {
+  line-height: 1.6;
+}
+
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+/* Links */
+
+.links {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+
+a.link {
+  color: var(--color-link);
+  font-size: 19px;
+  line-height: 1.3;
+}
+
+a.link:hover {
+  text-decoration: underline;
+}
+
+a.link::after {
+  content: " >";
+}
+
+/* Inner */
 .inner {
   max-width: 1020px;
   margin: 0 auto;
   position: relative;
+  padding: 0 20px;
 }
 
+/* btn */
 .btn {
   display: flex;
   align-items: center;
@@ -34,8 +86,8 @@ a {
   height: 24px;
   box-sizing: border-box;
   border-radius: 100px;
-  background-color: #0071e3;
-  color: #fff;
+  background-color: var(--color-link);
+  color: var(--color-white);
   font-size: 11px;
   line-height: 1;
   outline: none;
@@ -44,22 +96,36 @@ a {
 }
 
 .btn:focus {
-  box-shadow: 0 0 0 4px #81b9f1;
+  box-shadow: 0 0 0 4px var(--color-link-focus);
 }
 
 .btn:hover {
   opacity: 0.7;
 }
 
+/* Figures */
+.figures {
+  position: relative;
+}
+
+.figures figure,
+.figures figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 /* Header */
 
 header {
-  background-color: #3e3e3e;
+  background-color: var(--color-header);
+  position: relative;
+  z-index: 8;
 }
 
 header .main_menu {
   display: flex;
-  color: #f3f3f3;
+  color: var(--color-font-lightgray);
   justify-content: space-between;
   height: 45px;
 }
@@ -71,7 +137,7 @@ header ul li {
 
 header .main_menu > li > a {
   padding: 0 10px;
-  color: #f3f3f3;
+  color: var(--color-font-lightgray);
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -113,12 +179,12 @@ header .shopping_bag {
   position: absolute;
   visibility: hidden;
   opacity: 0;
-  background-color: #fff;
+  background-color: var(--color-white);
   width: 320px;
   top: calc(100% + 4px);
   right: -20px;
   border-radius: 20px;
-  border: 2px solid #e7e7e7;
+  border: 2px solid var(--color-border);
   padding: 20px 10px 10px;
   box-sizing: border-box;
   transition: 0.5s;
@@ -142,8 +208,8 @@ header .shopping_bag.show {
   content: "";
   width: 12px;
   height: 12px;
-  border: 2px solid #e7e7e7;
-  background-color: #fff;
+  border: 2px solid var(--color-border);
+  background-color: var(--color-white);
   position: absolute;
   top: 0;
   left: 50%;
@@ -155,14 +221,14 @@ header .shopping_bag.show {
   font-size: 17px;
   text-align: center;
   margin: 30px 0;
-  color: #333;
+  color: var(--color-font-darkgray);
 }
 
 .main_menu .btn_shopping_bag .shopping_bag ul li > a {
   display: block;
   width: 100%;
-  color: #0878a0;
-  border-top: 1px solid #c1c1c1;
+  color: var(--color-link);
+  border-top: 1px solid var(--color-border);
   font-weight: 500;
   font-size: 14px;
   padding: 14px;
@@ -196,7 +262,7 @@ header .search .shadow {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--color-shadow);
 }
 
 header .search .textfield {
@@ -205,8 +271,8 @@ header .search .textfield {
 
 header .search .textfield input {
   width: 100%;
-  height: 44px;
-  color: #fff;
+  height: var(--header-height);
+  color: var(--color-white);
   padding: 0 40px;
   box-sizing: border-box;
   font-size: 17px;
@@ -217,7 +283,7 @@ header .search .textfield input {
 
 header .search .textfield .search-icon {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-image: url(../images/header_search.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -228,7 +294,7 @@ header .search .textfield .search-icon {
 }
 header .search .textfield .search-closer {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-image: url(../images/header_close.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -249,7 +315,7 @@ header .search .auto-completes {
   width: 100%;
   left: 0;
   padding: 26px 40px 20px;
-  background-color: #fff;
+  background-color: var(--color-white);
   border-radius: 0 0 18px 18px;
   box-sizing: border-box;
 }
@@ -269,7 +335,7 @@ header .search .auto-completes li a {
   width: 100%;
 }
 header .search .auto-completes li:hover a {
-  color: #0071e3;
+  color: var(--color-link);
 }
 
 /* SearchBar Animation  */
@@ -308,7 +374,7 @@ nav {
   background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(20px);
   z-index: 10;
-  border-bottom: 1px solid #d2d2d2;
+  border-bottom: 1px solid var(--color-border);
 }
 
 nav .inner {
@@ -337,7 +403,7 @@ nav .nav_menu a {
 }
 
 nav .nav_menu li:hover a {
-  color: #0071e3;
+  color: var(--color-link);
 }
 
 nav .nav_menu li.active a {
@@ -346,5 +412,75 @@ nav .nav_menu li.active a {
 }
 
 nav .nav_menu li.active:hover a {
-  color: #1d1d1d;
+  color: var(--color-font);
+}
+
+/* Hero Content */
+
+.hero {
+  background-color: var(--color-section);
+}
+.hero .inner {
+  padding-bottom: 110px;
+}
+.hero h1 {
+  position: relative;
+  width: 221px;
+  height: 91px;
+  background-image: url(../images/hero_ipad_text.png);
+  transform: translate(624px, 235px);
+  z-index: 1;
+}
+
+.hero .figures {
+  height: 808px;
+  position: relative;
+}
+
+.hero figure {
+  transform: translate(74px, -164px);
+}
+
+.hero figure figcaption .caption-camera {
+  transform: translate(43px, 580px);
+  width: 120px;
+  height: 84px;
+  background-image: url(../images/hero_ipad_caption_camera.png);
+}
+.hero figure figcaption .caption-chip {
+  transform: translate(589px, 430px);
+  width: 95px;
+  height: 43px;
+  background-image: url(../images/hero_ipad_caption_chip.png);
+}
+.hero figure figcaption .caption-storage {
+  transform: translate(627px, 501px);
+  width: 80px;
+  height: 43px;
+  background-image: url(../images/hero_ipad_caption_storage.png);
+}
+
+.hero h2 {
+  width: 738px;
+  height: 145px;
+  margin: 0 auto;
+  background-image: url(../images/hero_headline.png);
+}
+
+.hero p.pricing {
+  margin-top: 40px;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.hero p.description {
+  width: 88%;
+  margin: 18px auth 0;
+  font-size: 19px;
+  text-align: center;
+}
+
+.hero .links {
+  margin-top: 40px;
 }
