--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ html.fixed {
 }
 
 body {
-  height: 5000px;
+  height: 100%;
   position: relative;
   font-size: 16px;
   font-family: "roboto", "Noto Sans KR", "sans-serif";
@@ -694,6 +694,62 @@ nav .nav_menu li.active:hover a {
   height: 50px;
   transform: translate(540px, 660px);
   background-image: url(../images/display_shareplay_caption.png);
+}
+
+/* Camera Section */
+.camera {
+  margin-top: 160px;
+}
+
+/* Camera - CenterStage */
+
+.camera .stage {
+  position: relative;
+}
+
+.camera .stage h1 {
+  width: 720px;
+  height: 450px;
+  background-image: url(../images/camera_headline.png);
+  transform: translate(-25px, 0);
+}
+
+.camera .stage .info {
+  position: absolute;
+  top: 150px;
+  right: 0;
+}
+
+.camera .stage .figures {
+  height: 700px;
+}
+
+.camera .stage video {
+  position: absolute;
+  top: 36px;
+  left: 76px;
+  -webkit-mask-image: url(../images/camera_video_mask.png);
+  mask-image: url(../images/camera_video_mask.png);
+}
+
+/* Camera - Edit */
+.camera .edit {
+  margin-top: 120px;
+}
+
+.camera .edit .figures {
+  height: 910px;
+}
+
+.camera .edit figure {
+  transform: translate(20px, 0);
+}
+
+.camera .edit figcaption {
+  width: 150px;
+  height: 150px;
+  transform: translate(80px, 863px);
+  background-image: url(../images/camera_edit_caption.png);
 }
 
 @keyframes sprite-icon {
