--- a/css/main.css
+++ b/css/main.css
@@ -942,6 +942,94 @@ nav .nav_menu li.active:hover a {
   transform: translate(490px, 450px);
 }
 
+/* Apps Section */
+
+.apps {
+  margin-top: 320px;
+}
+
+.apps h1 {
+  width: 550px;
+  height: 330px;
+  background-image: url(../images/apps_headline.png);
+}
+
+.apps .info {
+  max-width: 430px;
+  padding: 34px 64px 0;
+}
+
+.apps .figures > div {
+  flex-grow: 1;
+}
+
+.apps .figures {
+  height: 660px;
+  display: flex;
+}
+
+.apps .figure-masterclass {
+  width: 550px;
+  height: 550px;
+  transform: translate(600px, -340px);
+}
+
+.apps .figure-masterclass figcaption {
+  width: 140px;
+  height: 110px;
+  transform: translate(30px, 670px);
+  background-image: url(../images/apps_masterclass_caption.png);
+}
+
+.apps .figure-adobe {
+  width: 650px;
+  height: 500px;
+  transform: translate(-480px, 40px);
+}
+
+.apps .figure-adobe figcaption {
+  background-image: url(../images/apps_adobe_caption.png);
+  width: 140px;
+  height: 110px;
+  transform: translate(490px, 480px);
+}
+.apps .figure-fantasian {
+  width: 650px;
+  height: 500px;
+  transform: translate(-120px, 420px);
+}
+
+.apps .figure-fantasian figcaption {
+  width: 110px;
+  height: 100px;
+  background-image: url(../images/apps_fantasian_caption.png);
+  transform: translate(30px, 460px);
+}
+
+.apps .figure-books {
+  width: 540px;
+  height: 498px;
+  transform: translate(-100px, 20px);
+}
+
+.apps .figure-books figcaption {
+  width: 70px;
+  height: 70px;
+  transform: translate(360px, 690px);
+  background-image: url(../images/apps_books_caption.png);
+}
+.apps .figure-good-note {
+  width: 650px;
+  height: 608px;
+  transform: translate(-50px, 310px);
+}
+
+.apps .figure-good-note figcaption {
+  width: 140px;
+  height: 120px;
+  background-image: url(../images/apps_goodnotes_caption.png);
+  transform: translate(40px, 658px);
+}
 @keyframes sprite-icon {
   0.00% {
     background-position: 0px 0px;
