--- a/css/main.css
+++ b/css/main.css
@@ -1030,6 +1030,45 @@ nav .nav_menu li.active:hover a {
   background-image: url(../images/apps_goodnotes_caption.png);
   transform: translate(40px, 658px);
 }
+
+/* Privacy Section */
+.privacy {
+  margin-top: 550px;
+}
+
+.privacy h1 {
+  width: 430px;
+  height: 240px;
+  background-image: url(../images/privacy_headline.png);
+  transform: translate(610px, -40px);
+  position: relative;
+  z-index: 1;
+}
+
+.privacy figure {
+  width: 620px;
+  height: 450px;
+  transform: translate(-150px, -190px);
+}
+
+.privacy figcaption.apple-login {
+  width: 230px;
+  height: 140px;
+  background-image: url(../images/privacy_caption_apple_id.png);
+  transform: translate(190px, -667px);
+}
+
+.privacy figcaption.touch-login {
+  width: 190px;
+  height: 140px;
+  background-image: url(../images/privacy_caption_touch_id.png);
+  transform: translate(450px, -280px);
+}
+
+.privacy .info {
+  max-width: 430px;
+}
+
 @keyframes sprite-icon {
   0.00% {
     background-position: 0px 0px;
