--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,40 @@ a.link::after {
   line-height: 1.5;
 }
 
+.whiteBox {
+  background-color: var(--color-white);
+  max-width: 1386px;
+  margin: 0 auto;
+  border-radius: 30px;
+  box-sizing: border-box;
+  padding: 100px 30px;
+}
+
+.whiteBox.whiteBox--transparent {
+  background-color: transparent;
+}
+
+.whiteBox h1 {
+  line-height: 1.3;
+  font-weight: 600;
+  font-size: 50px;
+}
+
+.whiteBox p {
+  font-size: 19px;
+  margin-top: 20px;
+  font-weight: 500;
+}
+
+.whiteBox .icon {
+  margin-bottom: 20px;
+}
+
+.whiteBox a.link {
+  display: block;
+  margin-top: 26px;
+}
+
 /* Header */
 
 header {
@@ -1090,6 +1124,45 @@ nav .nav_menu li.active:hover a {
   width: 440px;
   height: 330px;
   transform: translate(490px, -565px);
+}
+
+/* AR Section */
+
+.ar {
+  background-color: var(--color-section);
+  padding-top: 20px;
+}
+
+.ar .whiteBox {
+  display: block;
+  margin-top: 20px;
+  padding-bottom: 0;
+}
+
+.ar .inner {
+  display: flex;
+}
+
+.ar .inner > div {
+  width: 400px;
+  margin-top: 60px;
+  margin-right: 90px;
+}
+
+/* Environment Section */
+.environment {
+  background-color: var(--color-section);
+  padding-top: 30px;
+  text-align: center;
+}
+
+.environment .icon {
+  display: block;
+  margin: 0 auto 30px;
+}
+
+.environment h1 {
+  color: #03a10e;
 }
 
 @keyframes sprite-icon {
