--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,12 @@ p {
   line-height: 1.6;
 }
 
+sup {
+  vertical-align: top;
+  font-size: 0.7em;
+  margin-right: 6px;
+}
+
 .bgtext {
   display: block;
   text-indent: -9999px;
@@ -1256,6 +1262,55 @@ nav .nav_menu li.active:hover a {
   margin-top: 56px;
   margin-bottom: 46px;
   font-size: 14px;
+}
+
+/* footer - buyInfo */
+footer {
+  background-color: var(--color-section);
+  padding-top: 120px;
+}
+
+footer .buy-info {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+footer .buy-info img {
+  width: 80px;
+  height: 80px;
+}
+
+footer h2 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 16px 0 12px;
+}
+
+footer .buy-info p {
+  margin-bottom: 30px;
+}
+
+/* Footer - FootNote */
+
+footer .warning {
+  border-top: 1px solid var(--color-border);
+  border-bottom: 1px solid var(--color-border);
+  padding: 18px 0 12px;
+}
+
+footer .warning ol {
+  list-style: decimal;
+  padding-left: 16px;
+}
+
+footer .warning li {
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: var(--color-font-darkgray);
 }
 
 @keyframes sprite-icon {
