--- a/css/main.css
+++ b/css/main.css
@@ -303,6 +303,23 @@ header ul.main_menu > li.btn_shopping_bag > a {
   background-position: 10px 13px;
 }
 
+header ul.main_menu li.btn_main_menu {
+  display: none;
+}
+
+header ul.main_menu li.btn_main_menu span {
+  display: block;
+  height: 1px;
+  width: 15px;
+  background-color: var(--color-white);
+  margin-bottom: 6px;
+  transition: 0.3s;
+}
+
+header ul.main_menu li.btn_main_menu span:last-child {
+  margin-bottom: 0;
+}
+
 header ul li.header_logo > a {
   background-image: url(../images/header_apple.svg);
   background-position: center;
@@ -314,6 +331,7 @@ header ul li.btn_search > a {
 
 header ul.main_menu > li.btn_shopping_bag > a {
   background-image: url(../images/header_bag.svg);
+  transition: 0.4s;
 }
 
 header .btn_shopping_bag {
@@ -512,6 +530,56 @@ header.searching .search .auto-completes h3,
 header.searching .search .auto-completes li {
   transition-delay: 0.2s;
   transform: translate(0, 0);
+}
+
+@media (max-width: 1000px) {
+  header .inner {
+    padding: 0 10px;
+  }
+}
+
+@media (max-width: 740px) {
+  header ul.main_menu > li {
+    display: none;
+  }
+
+  header ul.main_menu > li.btn_main_menu,
+  header ul.main_menu > li.header_logo,
+  header ul.main_menu > li.btn_shopping_bag {
+    display: flex;
+  }
+
+  header.menuing {
+    background-color: var(--color-black);
+  }
+
+  header::before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: var(--header-height);
+    background-color: var(--color-black);
+    width: 100%;
+    height: 0;
+    transition: 0.4s;
+  }
+  header.menuing::before {
+    height: 100vh;
+  }
+
+  header.menuing ul.main_menu li.btn_shopping_bag > a {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  header.menuing ul.main_menu > li.btn_main_menu span:first-child {
+    transform: translate(0, 3.5px) rotate(45deg);
+  }
+
+  header.menuing ul.main_menu > li.btn_main_menu span:last-child {
+    transform: translate(0, -3.5px) rotate(-45deg);
+  }
 }
 
 /* Sticky Header_Navigation */
