--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html {
   --color-black: #000;
   --color-font: #1d1d1d;
   --color-font-darkgray: #6e6e6e;
+  --color-font-middlegray: #d7d7d7;
   --color-font-lightgray: #f5f5f5;
   --color-link: #0071e3;
   --color-link-focus: #81b9f1;
@@ -12,7 +13,7 @@ html {
   --color-header: #3a3a3a;
   --color-section: #f5f5f5;
   --color-shadow: rgba(0, 0, 0, 0.4);
-  --header-height: var(--header-height);
+  --header-height: 45px;
 }
 
 html.fixed {
@@ -437,7 +438,7 @@ header .search .textfield input {
   width: 100%;
   height: var(--header-height);
   color: var(--color-white);
-  padding: 13px 40px 0;
+  padding: 0 40px;
   box-sizing: border-box;
   font-size: 17px;
   border: none;
@@ -455,6 +456,7 @@ header .search .textfield .search-icon {
   top: 0;
   left: 0;
   opacity: 0.4;
+  margin: 0 auto 0;
 }
 header .search .textfield .search-closer {
   width: 40px;
@@ -475,10 +477,10 @@ header .search .textfield .search-closer:hover {
 
 header .search .auto-completes {
   position: absolute;
-  top: 100%;
+  top: var(--header-height);
   width: 100%;
   left: 0;
-  margin-top: 13px;
+  /* margin-top: 13px; */
   padding: 26px 40px 20px;
   background-color: var(--color-white);
   border-radius: 0 0 18px 18px;
@@ -532,6 +534,10 @@ header.searching .search .auto-completes li {
   transform: translate(0, 0);
 }
 
+header .clone-menu {
+  display: none;
+}
+
 @media (max-width: 1000px) {
   header .inner {
     padding: 0 10px;
@@ -549,6 +555,26 @@ header.searching .search .auto-completes li {
     display: flex;
   }
 
+  header .search_wrap {
+    padding: 0 20px 14px;
+    box-sizing: border-box;
+    top: var(--header-height);
+  }
+
+  header .search .textfield input {
+    transform: translate(0, 0);
+    background-color: var(--color-header);
+    position: absolute;
+    border-radius: 8px;
+  }
+
+  header .search-icon {
+    width: 30px;
+    height: 30px;
+    background-image: url(../images/header_search.svg);
+    position: relative;
+    z-index: 1;
+  }
   header.menuing {
     background-color: var(--color-black);
   }
@@ -564,6 +590,7 @@ header.searching .search .auto-completes li {
     height: 0;
     transition: 0.4s;
   }
+
   header.menuing::before {
     height: 100vh;
   }
@@ -579,6 +606,63 @@ header.searching .search .auto-completes li {
 
   header.menuing ul.main_menu > li.btn_main_menu span:last-child {
     transform: translate(0, -3.5px) rotate(-45deg);
+  }
+
+  header.menuing .search_wrap {
+    padding: 0;
+    max-width: 780px;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  header.menuing .search_wrap .search {
+    max-width: 100%;
+    margin: 0 20px;
+  }
+  header.menuing .search_wrap .shadow {
+    display: none;
+  }
+
+  header.menuing .search_wrap .auto-completes {
+    display: none;
+  }
+
+  header.menuing .clone-menu {
+    display: block;
+    position: absolute;
+    top: 103px;
+    left: 0;
+    width: 100%;
+  }
+  header.menuing .clone-menu ul li {
+    margin: 4px 20px;
+    box-sizing: border-box;
+    border-bottom: 1px solid var(--color-header);
+  }
+
+  header.menuing .clone-menu ul li:last-child {
+    border-bottom: none;
+  }
+
+  header.menuing .clone-menu ul li a {
+    display: block;
+    padding: 16px 0;
+    width: 100%;
+    height: 100%;
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--color-font-middlegray);
+  }
+
+  header.menuing .clone-menu ul li:hover a {
+    color: var(--color-white);
+  }
+
+  header .search input,
+  header .search .search-icon,
+  header .search .auto-completes h3,
+  header .search .auto-completes li {
+    transform: translate(0, 0);
   }
 }
 
