--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
   --color-header: #3a3a3a;
   --color-section: #f5f5f5;
   --color-shadow: rgba(0, 0, 0, 0.4);
-  --header-height: 45px;
+  --header-height: 44px;
 }
 
 html.fixed {
@@ -268,6 +268,7 @@ header {
   background-color: var(--color-header);
   position: relative;
   z-index: 8;
+  transition: 0.4s;
 }
 
 header .main_menu {
@@ -432,6 +433,8 @@ header .search .shadow {
 
 header .search .textfield {
   position: relative;
+  width: 100%;
+  transition: 0.2s;
 }
 
 header .search .textfield input {
@@ -534,8 +537,42 @@ header.searching .search .auto-completes li {
   transform: translate(0, 0);
 }
 
+/* Mobile Mode Main Menu ( MMMM ) */
 header .clone-menu {
-  display: none;
+  display: block;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 103px;
+  left: 0;
+  width: 100%;
+  /* padding: 0 20px; */
+  box-sizing: border-box;
+  transform: translate(0, -50px);
+}
+
+header .clone-menu ul li {
+  margin: 4px 20px;
+  box-sizing: border-box;
+  border-bottom: 1px solid var(--color-header);
+}
+
+header .clone-menu ul li:last-child {
+  border-bottom: none;
+}
+
+header .clone-menu ul li a {
+  display: block;
+  padding: 16px 0;
+  width: 100%;
+  height: 100%;
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--color-font-middlegray);
+}
+
+header .clone-menu ul li:hover a {
+  color: var(--color-white);
 }
 
 @media (max-width: 1000px) {
@@ -556,12 +593,18 @@ header .clone-menu {
   }
 
   header .search_wrap {
+    width: 100%;
     padding: 0 20px 14px;
     box-sizing: border-box;
     top: var(--header-height);
   }
 
+  header .search_wrap .search .textfield {
+    width: 100%;
+  }
+
   header .search .textfield input {
+    margin-right: 60px;
     transform: translate(0, 0);
     background-color: var(--color-header);
     position: absolute;
@@ -575,6 +618,25 @@ header .clone-menu {
     position: relative;
     z-index: 1;
   }
+
+  header .search-closer {
+    display: none;
+  }
+
+  header .search .search-canceler {
+    height: var(--header-height);
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    visibility: hidden;
+    color: var(--color-link);
+  }
+
   header.menuing {
     background-color: var(--color-black);
   }
@@ -610,9 +672,12 @@ header .clone-menu {
 
   header.menuing .search_wrap {
     padding: 0;
+    padding-bottom: 60px;
     max-width: 780px;
     visibility: visible;
     opacity: 1;
+    height: var(--header-height);
+    border-bottom: 1px solid var(--color-header);
   }
 
   header.menuing .search_wrap .search {
@@ -623,38 +688,64 @@ header .clone-menu {
     display: none;
   }
 
-  header.menuing .search_wrap .auto-completes {
-    display: none;
+  header .search_wrap .auto-completes {
+    visibility: hidden;
+    opacity: 0;
   }
 
   header.menuing .clone-menu {
-    display: block;
-    position: absolute;
-    top: 103px;
-    left: 0;
-    width: 100%;
-  }
-  header.menuing .clone-menu ul li {
-    margin: 4px 20px;
-    box-sizing: border-box;
-    border-bottom: 1px solid var(--color-header);
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0, 0);
+    transition: 0.7s;
   }
 
-  header.menuing .clone-menu ul li:last-child {
+  header.menuing.searching--mobile {
+    transform: translate(0, -30px);
     border-bottom: none;
   }
 
-  header.menuing .clone-menu ul li a {
-    display: block;
-    padding: 16px 0;
-    width: 100%;
-    height: 100%;
-    font-weight: 400;
-    font-size: 14px;
-    color: var(--color-font-middlegray);
+  header.menuing.searching--mobile .textfield {
+    width: calc(100% - 50px);
   }
 
-  header.menuing .clone-menu ul li:hover a {
+  header.menuing.searching--mobile .search-canceler {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  header.menuing.searching--mobile .clone-menu {
+    transform: translate(0, 100px);
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  header.menuing.searching--mobile .auto-completes {
+    visibility: visible;
+    opacity: 1;
+    margin-top: 20px;
+    padding: 10px 0 30px;
+    background-color: var(--color-black);
+  }
+
+  header.menuing.searching--mobile .auto-completes h3 {
+    color: var(--color-font-darkgray);
+    font-size: 12px;
+  }
+
+  header.menuing.searching--mobile .auto-completes ul li {
+    padding: 20px 20px;
+    border-bottom: 1px solid var(--color-header);
+  }
+
+  header.menuing.searching--mobile .auto-completes ul li a {
+    padding: 0;
+    color: var(--color-font-middlegray);
+    font-size: 12px;
+    font-weight: 400;
+  }
+
+  header.menuing.searching--mobile .auto-completes ul li:hover a {
     color: var(--color-white);
   }
 
