--- a/css/main.css
+++ b/css/main.css
@@ -760,6 +760,7 @@ header .clone-menu ul li:hover a {
 /* Sticky Header_Navigation */
 
 nav {
+  --nav-height: 52px;
   position: sticky;
   top: 0;
   background-color: rgba(255, 255, 255, 0.7);
@@ -771,7 +772,7 @@ nav {
 nav .inner {
   display: flex;
   align-items: center;
-  height: 52px;
+  height: var(--nav-height);
 }
 
 nav h2 {
@@ -781,6 +782,10 @@ nav h2 {
   font-weight: 500;
 }
 
+nav .nav_menu_toggler {
+  visibility: hidden;
+  opacity: 0;
+}
 nav .nav_menu {
   display: flex;
   gap: 12px;
@@ -804,6 +809,111 @@ nav .nav_menu li.active a {
 
 nav .nav_menu li.active:hover a {
   color: var(--color-font);
+}
+
+/* Sticky Navigation -- Mobile Mode  */
+
+@media (max-width: 740px) {
+  nav .shadow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-shadow);
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  nav .bg_nav_menu {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    height: 232px;
+    width: 100%;
+    background-color: var(--color-white);
+    transition: 0.4s;
+  }
+  nav .nav_menu_toggler {
+    opacity: 1;
+    visibility: visible;
+    position: relative;
+    width: 40px;
+    margin: 0 20px 0;
+    height: 24px;
+    cursor: pointer;
+  }
+
+  nav .nav_menu_toggler::before,
+  nav .nav_menu_toggler::after {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 1px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: var(--color-font-darkgray);
+    transition: 0.5s;
+  }
+
+  nav .nav_menu_toggler::before {
+    transform: rotate(40deg);
+    left: -9px;
+  }
+
+  nav .nav_menu_toggler::after {
+    transform: rotate(-40deg);
+    right: -9px;
+  }
+
+  nav .nav_menu {
+    position: absolute;
+    top: var(--nav-height);
+    left: 0;
+    display: block;
+    width: 100%;
+    padding: 0 40px 30px;
+    box-sizing: border-box;
+    transform: translate(0, -50px);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+  }
+
+  nav .nav_menu li {
+    padding: 16px 0;
+    border-bottom: 1px solid var(--color-border);
+  }
+
+  nav .nav_menu li:last-child {
+    border-bottom: none;
+  }
+
+  nav.menuing .bg_nav_menu {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  nav.menuing .shadow {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  nav.menuing .nav_menu_toggler::before {
+    transform: rotate(-40deg);
+  }
+  nav.menuing .nav_menu_toggler::after {
+    transform: rotate(40deg);
+  }
+  nav.menuing .nav_menu {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0, 0);
+  }
 }
 
 /* Main Page */
