--- a/css/main.css
+++ b/css/main.css
@@ -77,12 +77,30 @@ a.link::after {
   content: " >";
 }
 
+@media (max-width: 740px) {
+  .links {
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  a.link {
+    font-size: 16px;
+  }
+}
+
 /* Inner */
 .inner {
   max-width: 1020px;
   margin: 0 auto;
   position: relative;
   padding: 0 20px;
+}
+
+@media (max-width: 1000px) {
+  .inner {
+    max-width: 692px;
+  }
 }
 
 /* btn */
@@ -284,7 +302,7 @@ header ul li {
 }
 
 header .main_menu > li > a {
-  padding: 0 10px;
+  padding: 0 6px;
   color: var(--color-font-lightgray);
   text-decoration: none;
   display: flex;
@@ -989,6 +1007,101 @@ main {
 
 .hero .links {
   margin-top: 40px;
+}
+
+/* HeroSection - Tablet Mode */
+@media (max-width: 1000px) {
+  .hero h1 {
+    transform: scale(0.8) translate(590px, 200px);
+  }
+
+  .hero .figures {
+    height: 600px;
+  }
+  .hero figure {
+    transform: none;
+  }
+  .hero figure img {
+    transform: scale(0.8) translate(0, -280px);
+  }
+  .hero figure figcaption .caption-camera {
+    transform: scale(0.8) translate(100px, 420px);
+  }
+  .hero figure figcaption .caption-chip {
+    transform: scale(0.8) translate(650px, 180px);
+  }
+  .hero figure figcaption .caption-storage {
+    transform: scale(0.8) translate(700px, 270px);
+  }
+  .hero h2 {
+    width: 450px;
+  }
+  .hero p.pricing {
+    font-size: 20px;
+    padding-bottom: 20px;
+  }
+  .hero p.description {
+    font-size: 18px;
+  }
+  a.link {
+    font-size: 18px;
+  }
+}
+
+/* HeroSection - Mobile Mode */
+@media (max-width: 740px) {
+  .hero .inner {
+    padding-bottom: none;
+  }
+
+  .hero h1 {
+    position: static;
+    transform: none;
+    padding-top: 60px;
+    margin: 0 auto 40px;
+  }
+
+  .hero .figures {
+    display: flex;
+    justify-content: center;
+    height: auto;
+    padding-bottom: 110px;
+  }
+
+  .hero figure {
+    transform: none;
+    position: static;
+  }
+
+  .hero figure img {
+    width: 437px;
+    margin: 0 auto;
+  }
+
+  .hero figure figcaption .caption-camera {
+    transform: scale(1.3) translate(110px, 330px);
+    background-image: url(../images/hero_ipad_caption_camera_mobile.png);
+  }
+  .hero figure figcaption .caption-chip {
+    transform: translate(370px, 0);
+  }
+  .hero figure figcaption .caption-storage {
+    transform: translate(420px, 80px);
+  }
+
+  .hero h2 {
+    width: 620px;
+    background-image: url(../images/hero_headline_mobile.png);
+  }
+
+  .hero p.pricing {
+    font-size: 20px;
+  }
+
+  .hero p.description {
+    font-size: 16px;
+    width: auto;
+  }
 }
 
 /* Power Section */
