Fix_style/Relocation_figcaption_mobile_mode_hero_section

--- a/css/main.css
+++ b/css/main.css
@@ -1070,7 +1070,7 @@ main {
 
   .hero figure {
     transform: none;
-    position: static;
+    position: relative;
   }
 
   .hero figure img {
@@ -1080,14 +1080,14 @@ main {
   }
 
   .hero figure figcaption .caption-camera {
-    transform: scale(1.3) translate(110px, 330px);
+    transform: scale(1.3) translate(0px, 330px);
     background-image: url(../images/hero_ipad_caption_camera_mobile.png);
   }
   .hero figure figcaption .caption-chip {
-    transform: translate(370px, 0);
+    transform: translate(270px, 0);
   }
   .hero figure figcaption .caption-storage {
-    transform: translate(420px, 80px);
+    transform: translate(320px, 80px);
   }
 
   .hero h2 {
